--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "description": "Explore Anguilla's Top Locations & Events Happening Now.",
   "icons": [
     {
-      "src": "titlelogo.png",
+      "src": "titlelogo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "titlelogo.png",
+      "src": "titlelogo-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
